--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Montserrat:400,600,700&display=swap" rel="stylesheet">
 
     <title>App</title>
   </head>
